--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install '.[test]'
-    - name: Run tests
+    - name: Run tests with coverage
       run: |
-        python -m pytest
+        python -m pytest --cov=md_ssg --cov-report=xml --cov-report=xml --cov-fail-under=95
 
