--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ dependencies = [
     "toml"
 ]
 
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [project.urls]
 Homepage = "https://github.com/RKeelan/md-ssg"
 Changelog = "https://github.com/RKeelan/md-ssg/releases"
@@ -26,4 +30,18 @@ CI = "https://github.com/RKeelan/md-ssg/actions"
 md-ssg = "md_ssg.cli:cli"
 
 [project.optional-dependencies]
-test = ["pytest"]
+test = [
+    "coverage[toml]>=7.5",
+    "pytest>=8.0",
+    "pytest-cov>=5.0"
+]
+
+[tool.coverage.run]
+branch = true
+source = ["md_ssg"]
+omit = ["*/__main__.py", "tests/*"]
+
+[tool.coverage.report]
+show_missing = true
+precision = 1
+fail_under = 95
